dataset1235/2025-2/2947369575/users/2826236660/executions/1003782500_2667036473.log
== SUBMISSION (2025-08-27 22:59:18)
-- CODE: 
tempC = float(input("numero celcius:"))
tempK = tempC + 273.15
print(round(tempk, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk, 2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk, 2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk, 2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk, 2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk, 2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk, 2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:59:34)
-- CODE: 
tempC = float(input("numero celcius:"))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
numero celcius:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
numero celcius:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
numero celcius:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
numero celcius:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
numero celcius:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
numero celcius:303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:59:28)
-- CODE: 
tempC = float(input("numero celcius:"))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
numero celcius:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
numero celcius:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
numero celcius:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
numero celcius:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
numero celcius:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
numero celcius:303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:59:06)
-- CODE: 
tempC = float(input("numero celcius:"))
tempK = tempC + 273.15
print(round(tempC, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
numero celcius:20.25
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
numero celcius:-10.0
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
numero celcius:-40.0
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
numero celcius:100.0
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
numero celcius:0.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
numero celcius:30.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
